--- a/Pos/res/layout/inventory_edit_item.xml
+++ b/Pos/res/layout/inventory_edit_item.xml
@@ -201,7 +201,7 @@
         android:gravity="right" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sale_item_dialogbox_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight=".3"
