--- a/Pos/res/layout/inventory_report_lineitem.xml
+++ b/Pos/res/layout/inventory_report_lineitem.xml
@@ -25,7 +25,7 @@
             android:textColor="@color/text_color" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sale_item_dialogbox_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.33"
