--- a/Pos/res/layout/product_tab.xml
+++ b/Pos/res/layout/product_tab.xml
@@ -80,7 +80,7 @@
             android:text="Price" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/sale_item_dialogbox_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.24"
