remove lineitem from sale

--- a/Pos/res/layout/sale_item_dialogbox.xml
+++ b/Pos/res/layout/sale_item_dialogbox.xml
@@ -2,14 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/sale_item_dialogbox_name"
+        android:id="@+id/sale_item_dialogbox_nameeeee"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Large Text"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@color/text_color" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +22,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Quantity"
-            android:textAppearance="?android:attr/textAppearanceLarge" />
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="@color/text_color" />
 
         <EditText
             android:id="@+id/sale_item_dialogbox_editText"
@@ -31,7 +34,6 @@
 
             <requestFocus />
         </EditText>
-
     </LinearLayout>
 
     <LinearLayout
@@ -43,19 +45,35 @@
             android:id="@+id/sale_item_dialogbox_ok"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="OK" />
+            android:background="@drawable/greenbutton"
+            android:text="OK"
+            android:textColor="#FFFFFF" />
+
+        <LinearLayout
+            android:layout_width="3dp"
+            android:layout_height="match_parent" >
+        </LinearLayout>
 
         <Button
             android:id="@+id/sale_item_dialogbox_remove"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Remove" />
+            android:background="@drawable/red_button"
+            android:text="Remove"
+            android:textColor="#FFFFFF" />
+
+        <LinearLayout
+            android:layout_width="3dp"
+            android:layout_height="match_parent" >
+        </LinearLayout>
 
         <Button
             android:id="@+id/sale_item_dialogbox_edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edit" />
+            android:background="@drawable/light_grey_button"
+            android:text="Edit"
+            android:textColor="#FFFFFF" />
 
     </LinearLayout>
 
